<resources>
    <string name="app_name">KotlinExtensionFunction</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="msrp">MSRP</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="memo">Memo</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>